--- a/index.html
+++ b/index.html
@@ -435,8 +435,6 @@
                               <input type="submit" name="submit" value="1" class="button icon icon-functional">
                             </div>
                           </div>
-                          <input type="text" name="first" id="local-searchbox">
-                          <input type="submit" name="submit" value="1" class="button icon icon-functional">
                           <small class="">
                             <!-- If your search is more complex than just a keyword search, you can link to an Advanced Search -->
                             <span class="adv"><a href="../search" id="adv-search" title="Advanced">Advanced</a></span>
@@ -1045,12 +1043,21 @@
 
                 <p>There are many such JS plugins available, but we found this one to work well and do just enough and <a href="https://github.com/mikemerritt/LiveFilter/pull/14/commits/6f6023d108d4b3a70157392f3231e245610dcc72">easily modldable to our needs</a>.</p>
 
-                <p>Note: The sample <code>input</code> has had <code>.clearable</code> added so clear button shows after text has been added.</p>
+                <h5>Bonus notes</h5>
+                <ul>
+                  <li>The sample <code>input</code> has had <code>.clearable</code> added so clear button shows after text has been added.</li>
+                  <li>We hint about the action that will be performed by placing a search icon to the left of the box, it does not however act as a button as the form is automatically updated on keypress.</li>
+                </ul>
 
                 <div class="row">
 
                   <div id="livefilterdemo" class="callout columns medium-10 medium-push-1">
-                    <input class="filter clearable" type="text" value="" />
+                    <h3>Some content to scan</h3>
+                    <!-- <label class="">Type to filter these paper references</label> -->
+                    <div class="input-group">
+                      <span class="input-group-label"><i data-icon="1" class="icon icon-functional"></i></span>
+                      <input class="filter clearable input-group-field" type="text" value="" />
+                    </div>
                     <!-- <input class="reset" type="reset" value="ddd" /> -->
 
                     <div class="row small-up-1 medium-up-2 large-up-3" data-equalizer>
