Make research file name consistent

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                     <p><h4 class="white-color">Services</h4> Close to EBI Petrol. <br/><small>Found at css/ebi-services-about-colours.css</small></p>
                   </div>
                   <div class="column research-background white-color" data-equalizer-watch>
-                    <p><h4 class="white-color">Research</h4> Green. <br/><small>Found at css/ebi-research.colour.css</small></p>
+                    <p><h4 class="white-color">Research</h4> Green. <br/><small>Found at css/ebi-research-colours.css</small></p>
                   </div>
                   <div class="column training-background white-color" data-equalizer-watch>
                     <p><h4 class="white-color">Training</h4> Golden. <br/><small>Found at css/ebi-training-colours.css</small></p>
