--- a/sample-site/research.html
+++ b/sample-site/research.html
@@ -50,7 +50,7 @@
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/ebi-research.colour.css" type="text/css" media="all">
+  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/ebi-research-colours.css" type="text/css" media="all">
 
   <!-- for production the above can be replaced with -->
   <!--
