Uses new theme prefix for project specific CSS
From #5

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
   <meta name="ebi-localmasthead-color" content="#091314">
   <meta name="ebi-localmasthead-image" content="https://ebiwd.github.io/EBI-Framework/images/backgrounds/embl-ebi-background-4.jpg">
 
-    <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
+    <!-- you can replace this with theme-[projectname].css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/embl-petrol-colours.css" type="text/css" media="all">
+  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/theme-embl-petrol.css" type="text/css" media="all">
 
   <!-- for production the above can be replaced with -->
   <!--
@@ -329,7 +329,7 @@
                     <li>Core HTML structure: The basic HTML markkup structure for the page: global-nav black bar, local-nav area, main content div, footer, etc.</li>
                     <li><a href="css/ebi-global.css">EBI base CSS styles</a>: Our basic look/colours.</li>
                     <li><a href="https://ebiwd.github.io/EBI-Framework/libraries/foundation-6/css/foundation.css">Foundation base CSS styles</a>: this provides the base grid structure, style resets, and core structure of the page.</li>
-                    <li><a href="css/embl-petrol-colours.css">Your site's CSS colours</a>: Colours specific to your service/site.</li>
+                    <li><a href="css/theme-embl-petrol.css">Your site's CSS colours</a>: Colours specific to your service/site.</li>
                     <li>Fonts.css</li>
                     <li>jQuery 1.10.2: Slightly older versions may be compatible.</li>
                       <ul>
@@ -503,19 +503,19 @@
                 <p>
                 <div class="row small-up-1 medium-up-2 large-up-3" data-equalizer>
                   <div class="column ebi-background white-color" data-equalizer-watch>
-                    <p><h4 class="white-color">EBI Petrol</h4> The default. <br/><small>Found at css/embl-petrol-colours.css</small></p>
+                    <p><h4 class="white-color">EBI Petrol</h4> The default. <br/><small>Found at css/theme-embl-petrol.css</small></p>
                   </div>
                   <div class="column services-background white-color" data-equalizer-watch>
-                    <p><h4 class="white-color">Services</h4> Close to EBI Petrol. <br/><small>Found at css/ebi-services-about-colours.css</small></p>
+                    <p><h4 class="white-color">Services</h4> Close to EBI Petrol. <br/><small>Found at css/theme-ebi-services-about.css</small></p>
                   </div>
                   <div class="column research-background white-color" data-equalizer-watch>
-                    <p><h4 class="white-color">Research</h4> Green. <br/><small>Found at css/ebi-research-colours.css</small></p>
+                    <p><h4 class="white-color">Research</h4> Green. <br/><small>Found at css/theme-ebi-research.css</small></p>
                   </div>
                   <div class="column training-background white-color" data-equalizer-watch>
-                    <p><h4 class="white-color">Training</h4> Golden. <br/><small>Found at css/ebi-training-colours.css</small></p>
+                    <p><h4 class="white-color">Training</h4> Golden. <br/><small>Found at css/theme-ebi-training.css</small></p>
                   </div>
                   <div class="column industry-background white-color" data-equalizer-watch>
-                    <p><h4 class="white-color">Industry</h4> Bright blue ocean. <br/><small>Found at css/ebi-industry-colours.css</small></p>
+                    <p><h4 class="white-color">Industry</h4> Bright blue ocean. <br/><small>Found at css/theme-ebi-training.css</small></p>
                   </div>
                 </div>
                 </p>
@@ -544,13 +544,8 @@
                 <h3>Roll your own colors</h3>
 
 
-                <p>If you wish to make your own colour palatte, see this set of directions <code>/css/readme-custom-colours.txt</code></p>
+                <p>If you wish to make your own colour palatte, see this set of directions <code>/css/theme-readme-custom.txt</code></p>
 
-<!--                 <div class="callout row">
-                  <div class="columns small-1"><span class="lead icon icon-generic" data-icon="i"></span></div>
-                  <div class="columns small-11">If you wish to make your own colour palatte, see this set of directions /css/readme-custom-colours.txt</div>
-                </div>
- -->
               </section>
 
               <section id="typography" data-magellan-target="typography">
