--- a/sample-site/errorpages/404.html
+++ b/sample-site/errorpages/404.html
@@ -43,9 +43,9 @@
   <!-- Use this CSS file for any custom styling -->
   <link rel="stylesheet" href="../../css/custom.css" type="text/css" media="all">
 
-    <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
+    <!-- you can replace this with theme-[projectname].css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="../../move-to-cdn/css/embl-petrol-colours.css" type="text/css" media="all">
+  <link rel="stylesheet" href="../../move-to-cdn/css/theme-embl-petrol.css" type="text/css" media="all">
 
   <!-- for production the above can be replaced with -->
   <!--
