--- a/fonts/index.html
+++ b/fonts/index.html
@@ -50,9 +50,9 @@
   -->
   <meta name="ebi-localmasthead-image" content="https://ebiwd.github.io/EBI-Framework/images/backgrounds/embl-ebi-background-4.jpg">
 
-    <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
+    <!-- you can replace this with theme-[projectname].css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/embl-petrol-colours.css" type="text/css" media="all">
+  <link rel="stylesheet" href="https://ebiwd.github.io/EBI-Framework/css/theme-embl-petrol.css" type="text/css" media="all">
 
   <!-- for production the above can be replaced with -->
   <!--
