Integrate new tablesorter version

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                 </table>
 
                 <h4>Sorting table</h4>
-                <p>For user-interactive and programatic table sorting, we integrate <a href="https://github.com/christianbach/tablesorter">Tablesorter</a>.</p>
+                <p>For user-interactive and programatic table sorting, we integrate <a href="http://mottie.github.io/tablesorter/">Tablesorter</a>.</p>
                 <p>To use the plugin you will need to:</p>
                 <ol>
                   <li>Include <code>/libraries/tablesorter/jquery.tablesorter.min.js</code>. The file is not part of the default EBI Framework JS config.</li>
@@ -1020,7 +1020,7 @@
                 <!-- Include for table sorting -->
                 <!-- Note that we've loaded this with "defer", this technique may not be appropriate for your uses.
                      If not, load this JS after jQuery. -->
-                <script defer src="libraries/tablesorter/jquery.tablesorter.min.js"></script>
+                <script defer src="libraries/tablesorter/js/jquery.tablesorter.js"></script>
                 <script type="text/javascript">
                   window.addEventListener('load',function() {
                     $(document).ready(function() { 
