--- a/libraries/foundation-6/index.html
+++ b/libraries/foundation-6/index.html
@@ -1,30 +1,29 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
-    <link rel="stylesheet" href="css/foundation.css" />
-    <link rel="stylesheet" href="css/app.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Foundation for Sites</title>
+    <link rel="stylesheet" href="css/foundation.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-
     <div class="row">
       <div class="large-12 columns">
-        <h1>Welcome to Foundation for Sites 6</h1>
+        <h1>Welcome to Foundation</h1>
       </div>
     </div>
 
     <div class="row">
       <div class="large-12 columns">
-        <div class="callout large">
+        <div class="callout">
           <h3>We&rsquo;re stoked you want to try Foundation! </h3>
           <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
           <p>Once you've exhausted the fun in this document, you should check out:</p>
           <div class="row">
             <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/sites/docs/">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
+              <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
             </div>
             <div class="large-4 medium-4 columns">
               <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
@@ -52,36 +51,36 @@
 
         <div class="row">
           <div class="large-12 columns">
-            <div class="callout ">
+            <div class="primary callout">
               <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="large-6 medium-6 columns">
-            <div class="callout">
+            <div class="primary callout">
               <p>Six columns</p>
             </div>
           </div>
           <div class="large-6 medium-6 columns">
-            <div class="callout">
+            <div class="primary callout">
               <p>Six columns</p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="large-4 medium-4 small-4 columns">
-            <div class="callout">
+            <div class="primary callout">
               <p>Four columns</p>
             </div>
           </div>
           <div class="large-4 medium-4 small-4 columns">
-            <div class="callout">
+            <div class="primary callout">
               <p>Four columns</p>
             </div>
           </div>
           <div class="large-4 medium-4 small-4 columns">
-            <div class="callout">
+            <div class="primary callout">
               <p>Four columns</p>
             </div>
           </div>
@@ -107,10 +106,12 @@
               <input type="text" placeholder="large-4.columns" />
             </div>
             <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <div class="input-group">
-                <input type="text" placeholder="small-9.columns" class="input-group-field" />
-                <span class="input-group-label">.com</span>
+              <div class="row collapse">
+                <label>Input Label</label>
+                <div class="input-group">
+                  <input type="text" placeholder="small-9.columns" class="input-group-field" />
+                  <span class="input-group-label">.com</span>
+                </div>
               </div>
             </div>
           </div>
@@ -148,21 +149,21 @@
 
       <div class="large-4 medium-4 columns">
         <h5>Try one of these buttons:</h5>
-        <p><a href="#" class="small button">Simple Button</a><br/>
-        <a href="#" class="medium success button">Success Button</a><br/>
-        <a href="#" class="medium alert button">Alert Button</a><br/>
-        <a href="#" class="medium secondary button">Secondary Button</a></p>
+        <p><a href="#" class="button">Simple Button</a><br/>
+        <a href="#" class="success button">Success Btn</a><br/>
+        <a href="#" class="alert button">Alert Btn</a><br/>
+        <a href="#" class="secondary button">Secondary Btn</a></p>
         <div class="callout">
           <h5>So many components, girl!</h5>
           <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
+          <a href="http://foundation.zurb.com/sites/docs/" class="small button">Go to Foundation Docs</a>
         </div>
       </div>
     </div>
 
-    <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/what-input.min.js"></script>
-    <script src="js/foundation.min.js"></script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/vendor/what-input.js"></script>
+    <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
