Updates demo pages

--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -198,7 +198,7 @@
             <ol>
               <li><a href="front_page.html">EBI Homepage</a> <br/>
                 Porting the EBI Homepage.</li>
-              <li><a href="research.html">Research page</a> <br/>
+              <li><a href="research.html">Research page</a> <span class="label">Drupal</span><br/>
                 Porting the EBI Research page.</li>
               <li><a href="brochure.html">Brochure page</a> <br/>
                 A high-impact brochure-style page for technical hiring.</li>
