--- a/sample-site/brochure.html
+++ b/sample-site/brochure.html
@@ -477,27 +477,27 @@
 
               <div class="row small-up-2 medium-up-5" data-equalizer>
                 <a href="//www.ebi.ac.uk/services" class="white-color column services-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="("></span> <div class="inline-block">Services »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="("></span> <div class="inline-block">Services »</div></h4>
                   <small>To provide freely available data and bioinformatics services to all facets of the scientific community</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column research-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon=")"></span> <div class="inline-block">Research »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon=")"></span> <div class="inline-block">Research »</div></h4>
                   <small>To contribute to the advancement of biology through basic investigator-driven research</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column training-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="t"></span> <div class="inline-block">Training »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="t"></span> <div class="inline-block">Training »</div></h4>
                   <small>To provide advanced bioinformatics training to scientists at all levels</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column industry-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="I"></span> <div class="inline-block">Industry »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="I"></span> <div class="inline-block">Industry »</div></h4>
                   <small>To help disseminate cutting-edge technologies to industry</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column elixir-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="%"></span> <div class="inline-block">ELIXIR »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="%"></span> <div class="inline-block">ELIXIR »</div></h4>
                   <small>To support, as an ELIXIR node, the coordination of biological data provision throughout Europe.</small>
                   </p>
                 </a>
