Format custom meta tags to use "ebi:" namespace
Addresses #10

--- a/sample-site/errorpages/404.html
+++ b/sample-site/errorpages/404.html
@@ -12,10 +12,10 @@
   <meta name="theme-color" content="#70BDBD"> <!-- Android Chrome mobile browser tab color -->
 
   <!-- Add information on the life cycle of this page -->
-  <meta name="ebi-owner" content="John Doe"> <!-- Who should be contacted about changes -->
-  <meta name="ebi-review-cycle" content="30"> <!-- In days, how often should the content be reviewed -->
-  <meta name="ebi-last-review" content="2015-12-20"> <!-- The last time the content was reviewed -->
-  <meta name="ebi-expiry" content="2016-01-20"> <!-- When this conent is no longer relevant -->
+  <meta name="ebi:owner" content="John Doe"> <!-- Who should be contacted about changes -->
+  <meta name="ebi:review-cycle" content="30"> <!-- In days, how often should the content be reviewed -->
+  <meta name="ebi:last-review" content="2015-12-20"> <!-- The last time the content was reviewed -->
+  <meta name="ebi:expiry" content="2016-01-20"> <!-- When this conent is no longer relevant -->
     
   <!-- If you link to any other sites frequently, consider optimising performance with a DNS prefetch -->
   <link rel="dns-prefetch" href="//embl.de" />
