--- a/sample-site/boilerplate/ultra-wide.html
+++ b/sample-site/boilerplate/ultra-wide.html
@@ -12,10 +12,10 @@
   <meta name="theme-color" content="#70BDBD"> <!-- Android Chrome mobile browser tab color -->
     
   <!-- Add information on the life cycle of this page -->
-  <meta name="ebi-owner" content="John Doe"> <!-- Who should be contacted about changes -->
-  <meta name="ebi-review-cycle" content="30"> <!-- In days, how often should the content be reviewed -->
-  <meta name="ebi-last-review" content="2015-12-20"> <!-- The last time the content was reviewed -->
-  <meta name="ebi-expiry" content="2016-01-20"> <!-- When this content is no longer relevant -->
+  <meta name="ebi:owner" content="John Doe"> <!-- Who should be contacted about changes -->
+  <meta name="ebi:review-cycle" content="30"> <!-- In days, how often should the content be reviewed -->
+  <meta name="ebi:last-review" content="2015-12-20"> <!-- The last time the content was reviewed -->
+  <meta name="ebi:expiry" content="2016-01-20"> <!-- When this content is no longer relevant -->
     
   <!-- If you link to any other sites frequently, consider optimising performance with a DNS prefetch -->
   <link rel="dns-prefetch" href="//embl.de" />
@@ -46,8 +46,8 @@
 
   <!-- If you have a custom header image or colour -->
   <!--
-  <meta name="ebi-localmasthead-color" content="#000">
-  <meta name="ebi-localmasthead-image" content="https://ebiwd.github.io/EBI-Framework/images/backgrounds/embl-ebi-background.jpg">
+  <meta name="ebi:localmasthead-color" content="#000">
+  <meta name="ebi:localmasthead-image" content="https://ebiwd.github.io/EBI-Framework/images/backgrounds/embl-ebi-background.jpg">
   -->
 
     <!-- you can replace this with theme-[projectname].css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
