Adds sample text formatting

--- a/index.html
+++ b/index.html
@@ -554,7 +554,35 @@
 
                 <p>The default font used throughout the page is Helvetica Neue, and is implement through a web font loaded by <code>fonts.css</code>. This is done to reflect EMBL-wide branding.</p>
 
-                <p>For large text areas, such as the core content column on this site, we recommend using the CSS class <code>.serif</code> to use the "EB Garamond" font, which is also loaded by the font stylesheet. You can switch back to sans-serif styling with the class <code>.sans-serif</code>.</p>
+                <p>For large narrative text areas, consider the CSS class <code>.serif</code> to use the "EB Garamond" font, which is also loaded by the font stylesheet. You can switch back to sans-serif styling with the class <code>.sans-serif</code>.</p>
+
+                <h3>Quick index of styles</h3>
+
+                <p>With a variety of text comes the need for many formatting styles, use this table as a helper. Maybe you want to print it?</p>
+
+                <table>
+                  <thead>
+                    <tr>
+                      <th class="medium-2">Use</th>
+                      <th class="medium-8">Sample</th>
+                      <th>How to implement?</th>
+                    </tr>
+                  </thead>
+                  <tboyd>
+                    <tr>
+                      <td>Citations</td>
+                      <td><cite>Hi, I'm a <a href="#">citation</a>!</cite></td>
+                      <td>HTML <span class="code">&lt;cite&gt;</span> element</td>
+                    </tr>
+                    <tr>
+                      <td>Pullquotes</td>
+                      <td><blockquote>I'm being quouted here, or maybe just highlighted?</blockquote</td>
+                      <td>HTML <span class="code">&lt;blockquote&gt;</span> element. Consider combining with the grid classes and float-left or float-right for a highlight look.</td>
+                    </tr>
+                  </tbody>
+                </table>
+
+
 
               </section>
 
