--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
           <!-- local-title -->
           <div class="columns medium-7" id="local-title">
-            <h1><a href="[service-url]" title="Back to [service-name] homepage"><div class="hexagon"><i class="icon icon-generic" data-icon=":"></i></div> EBI Framework</a></h1>
+            <h1><a href="[service-url]" title="Back to [service-name] homepage">EBI Framework</a></h1>
           </div>
           <!-- /local-title -->
 
